refactor: Players를 Name에 의존하지 않게 구현 및 테스트 코드 수정